Fix spacing issue with heading of posts and pages

--- a/_sass/content.scss
+++ b/_sass/content.scss
@@ -5,6 +5,11 @@
   margin: 1.25rem 0 0;
   padding: 1rem;
 
+  h1 {
+    font-size: 2rem;
+    margin: 0;
+  }
+  
   h2 {
     font-size: 1.5rem;
     margin: 0;
